--- a/templates/chart2.html
+++ b/templates/chart2.html
@@ -14,34 +14,36 @@
                     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
             <![endif]-->
 
-        <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}"> -->     
+        <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}"> -->
 {% block head %}
-	 <title>{% block title %} Title!{% endblock %}</title>	 
+	 <title>{% block title %} Title!{% endblock %}</title>
 {% endblock %}
+</head>
 
 <body>
 <h2>first chart</h2>
-<div id={{ chartID|safe }}  class="chart" style="height: 300px"></div>
+<div id="{{ chartID|safe }}"  class="chart" style="height: 300px"></div>
 
-<script>           
+<script>
 	var chart_id = {{ chartID|safe }}
 	var series = {{ series|safe }}
-	var title = {{ title|safe }}
+	var title = "{{ title|safe }}"
 	var xAxis = {{ xAxis|safe }}
 	var yAxis = {{ yAxis|safe }}
 	var chart = {{ chart|safe }}
 </script>
-<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>  
-<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/4.0.1/highcharts.js"></script>  		
+<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/4.0.1/highcharts.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
+
 $(function () {
     $(chart_id).highcharts({
         chart: {
             zoomType: 'xy'
         },
         title: {
-            text: 'Average Monthly Temperature and Rainfall in Tokyo'
+            text: title
         },
         subtitle: {
             text: 'Source: WorldClimate.com'
