--- a/templates/chart2.html
+++ b/templates/chart2.html
@@ -22,7 +22,7 @@
 
 <body>
 <h2>first chart</h2>
-<div id="{{ chartID|safe }}"  class="chart" style="width:1000px;"></div>
+<div id="{{ chartID|safe }}"  class="chart" style="width:{{ chartwd|safe }}px;"></div>
 
 <script>
 	var chart_id = {{ chartID|safe }}
